tests/should_fail/const_b.c
int main() {
	int * const b = 0;
	b += 1;
}
